2007-12-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpad.c: (gst_pad_dispose):
	Really unlink the peer pad instead of setting the peer pointer to NULL
	when we dispose the pad.
	This correctly calls the unlink functions and makes sure that the peer
	does not have a handle to invalid memory. See #504671.

	* tests/check/gst/gstpad.c: (GST_START_TEST), (gst_pad_suite):
	Add testsuite for above case.

2007-12-20  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Peter Kjellerstedt <pkj axis com>

	* libs/gst/check/gstcheck.h:
	  Fix detection of the check version we're compiling against (would
	  otherwise break if check goes v0.10.0); correctly report the
	  name of the failed test again in case of failure, instead of
	  just 'tf' (fixes #504499).

2007-12-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_send_event),
	(gst_base_src_get_range), (gst_base_src_pad_get_range),
	(gst_base_src_loop), (gst_base_src_set_flushing),
	(gst_base_src_change_state):
	Allow sending EOS to the source to make it send out an EOS event from
	the streaming thread.
	Update docs and deprecate the old NULL/READY shutdown method.

	* tests/check/libs/basesrc.c: (GST_START_TEST),
	(gst_basesrc_suite):
	Add unit test for controlled shutdown.

2007-12-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/part-synchronisation.txt:
	Small updates.

	* gst/gstsegment.c: (gst_segment_set_seek),
	(gst_segment_set_newsegment_full), (gst_segment_to_stream_time),
	(gst_segment_to_running_time):
	The seek format can be different from the segment format when the start
	and stop values are not to be updated, when we only do a rate change for
	example.

	* tests/check/gst/gstsegment.c: (GST_START_TEST),
	(gst_segment_suite):
	Add a testcase for the rate-only seeks, checking that the format is
	correctly ignored when start and stop are not updated.

2007-12-18  Sebastian Dröge  <slomo@circular-chaos.org>
